--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,16 +1,23 @@
 .navbarPage {
+  position: fixed;
+  top: 0;
+  z-index: 999;
   width: 100%;
   backdrop-filter: blur(15px);
-  background-color: rgba(255, 255, 255, 0.286);
+  background-color: transparent !important;
 }
 .logo {
   display: flex;
   align-items: center;
   gap: 5px;
 }
+nav {
+  background-color: transparent !important;
+}
 nav .container {
   padding: 15px 0;
   display: flex;
+  color: white;
   align-items: center;
   justify-content: space-between;
 }
